--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,17 +1,47 @@
 add_subdirectory(base)
-add_subdirectory(dafif)
-add_subdirectory(iodevice)
-add_subdirectory(linearsystem)
-add_subdirectory(simulation)
-add_subdirectory(terrain)
-add_subdirectory(models)
-add_subdirectory(recorder)
-add_subdirectory(graphics)
-add_subdirectory(instruments)
-add_subdirectory(gui/glut)
+if(OPENEAAGLES_DAFIF)
+	add_subdirectory(dafif)
+endif()
+if(OPENEAAGLES_IODEVICE)
+	add_subdirectory(iodevice)
+endif()
+if(OPENEAAGLES_LINEARSYSTEM)
+	add_subdirectory(linearsystem)
+endif()
+if(OPENEAAGLES_SIMULATION)
+	add_subdirectory(simulation)
+endif()
+if(OPENEAAGLES_TERRAIN)
+	add_subdirectory(terrain)
+endif()
+if(OPENEAAGLES_MODELS)
+	add_subdirectory(models)
+endif()
+if(OPENEAAGLES_RECORDER)
+	add_subdirectory(recorder)
+endif()
+if(OPENEAAGLES_GRAPHICS)
+	add_subdirectory(graphics)
+endif()
+if(OPENEAAGLES_INSTRUMENTS)
+	add_subdirectory(instruments)
+endif()
+if(OPENEAAGLES_GUI)
+	add_subdirectory(gui/glut)
+endif()
 add_subdirectory(interop/common)
-add_subdirectory(interop/dis)
-add_subdirectory(interop/hla)
-add_subdirectory(interop/rprfom)
-add_subdirectory(otw)
-add_subdirectory(map/rpf)
+if(OPENEAAGLES_INTEROP_DIS)
+	add_subdirectory(interop/dis)
+endif()
+if(OPENEAAGLES_INTEROP_HLA)
+	add_subdirectory(interop/hla)
+endif()
+if(OPENEAAGLES_INTEROP_RPRFOM)
+	add_subdirectory(interop/rprfom)
+endif()
+if(OPENEAAGLES_INTEROP_OTW)
+	add_subdirectory(otw)
+endif()
+if(OPENEAAGLES_INTEROP_RPF)
+	add_subdirectory(map/rpf)
+endif()
