Move headers for recorder library and write CMake install

--- a/src/recorder/CMakeLists.txt
+++ b/src/recorder/CMakeLists.txt
@@ -18,10 +18,31 @@ add_library(recorder
 )
 
 target_link_libraries(recorder PRIVATE protobuf::libprotobuf protobuf::libprotoc)
-target_include_directories(recorder PUBLIC ${CMAKE_CURRENT_BINARY_DIR}/include)
+target_include_directories (
+	recorder
+	PUBLIC
+	$<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
+	# Since Protobuf generates code in the binary dir,
+	# it's necessary to include headers from there as well.
+	$<BUILD_INTERFACE:${CMAKE_CURRENT_BINARY_DIR}/include>
+	$<INSTALL_INTERFACE:include>
+)
 
 protobuf_generate (
 	TARGET recorder
 	APPEND_PATH ""
 	PROTOC_OUT_DIR include/openeaagles/recorder/protobuf
+)
+
+install (
+	TARGETS recorder
+)
+
+install (
+	DIRECTORY
+		${CMAKE_CURRENT_SOURCE_DIR}/include/
+		# Generated Protobuf headers must also be installed.
+		${CMAKE_CURRENT_BINARY_DIR}/include/
+	DESTINATION include
+	FILES_MATCHING PATTERN "*.h" PATTERN "*.hpp"
 )
