Move headers for dafif library and write CMake install

--- a/src/dafif/CMakeLists.txt
+++ b/src/dafif/CMakeLists.txt
@@ -11,3 +11,21 @@ add_library(dafif
 	Waypoint.cpp
 	WaypointLoader.cpp
 )
+
+target_include_directories (
+	dafif
+	PUBLIC
+	$<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
+	$<INSTALL_INTERFACE:include>
+)
+
+install (
+	TARGETS dafif
+)
+
+install (
+	DIRECTORY
+		${CMAKE_CURRENT_SOURCE_DIR}/include/
+	DESTINATION include
+	FILES_MATCHING PATTERN "*.h" PATTERN "*.hpp"
+)
