fixup! Move headers to their respective subdirectories

--- a/src/interop/common/CMakeLists.txt
+++ b/src/interop/common/CMakeLists.txt
@@ -11,3 +11,21 @@ target_link_libraries (
 	base
 	models
 )
+
+target_include_directories (
+	interopp_common
+	PUBLIC
+	$<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
+	$<INSTALL_INTERFACE:include>
+)
+
+install (
+	TARGETS interopp_common
+)
+
+install (
+	DIRECTORY
+		${CMAKE_CURRENT_SOURCE_DIR}/include/
+	DESTINATION include
+	FILES_MATCHING PATTERN "*.h" PATTERN "*.hpp"
+)
