--- a/src/interop/dis/CMakeLists.txt
+++ b/src/interop/dis/CMakeLists.txt
@@ -14,7 +14,25 @@ add_library(interop_dis
 )
 
 target_link_libraries (
-	interop_common
+	interop_dis
 	PRIVATE
 	base
+)
+
+target_include_directories (
+	interop_dis
+	PUBLIC
+	$<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
+	$<INSTALL_INTERFACE:include>
+)
+
+install (
+	TARGETS interop_dis
+)
+
+install (
+	DIRECTORY
+		${CMAKE_CURRENT_SOURCE_DIR}/include/
+	DESTINATION include
+	FILES_MATCHING PATTERN "*.h" PATTERN "*.hpp"
 )
