--- a/src/interop/rprfom/CMakeLists.txt
+++ b/src/interop/rprfom/CMakeLists.txt
@@ -11,3 +11,21 @@ add_library(interop_rprfom
 	Ntm.cpp
 	RprFom.cpp
 )
+
+target_include_directories (
+	interop_rprfom
+	PUBLIC
+	$<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
+	$<INSTALL_INTERFACE:include>
+)
+
+install (
+	TARGETS interop_rprfom
+)
+
+install (
+	DIRECTORY
+		${CMAKE_CURRENT_SOURCE_DIR}/include/
+	DESTINATION include
+	FILES_MATCHING PATTERN "*.h" PATTERN "*.hpp"
+)
