--- a/src/map/rpf/CMakeLists.txt
+++ b/src/map/rpf/CMakeLists.txt
@@ -11,3 +11,21 @@ add_library(map_rpf
 	TextureTable.cpp
 	map_utils.cpp
 )
+
+target_include_directories (
+	gui_glut
+	PUBLIC
+	$<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
+	$<INSTALL_INTERFACE:include>
+)
+
+install (
+	TARGETS gui_glut
+)
+
+install (
+	DIRECTORY
+		${CMAKE_CURRENT_SOURCE_DIR}/include/
+	DESTINATION include
+	FILES_MATCHING PATTERN "*.h" PATTERN "*.hpp"
+)
