--- a/src/gui/glut/CMakeLists.txt
+++ b/src/gui/glut/CMakeLists.txt
@@ -10,3 +10,21 @@ target_link_libraries (
 	base
 	graphics
 )
+
+target_include_directories (
+	gui_glut
+	PUBLIC
+	$<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
+	$<INSTALL_INTERFACE:include>
+)
+
+install (
+	TARGETS gui_glut
+)
+
+install (
+	DIRECTORY
+		${CMAKE_CURRENT_SOURCE_DIR}/include/
+	DESTINATION include
+	FILES_MATCHING PATTERN "*.h" PATTERN "*.hpp"
+)
